# connected-types

./: simple.cabal  stack.yaml
app/: Main.hs
src/: Email.hs
