cabal-version: 1.12
name:           simple
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/v0d1ch/connected-types#readme>
homepage:       https://github.com/v0d1ch/connected-types#readme
bug-reports:    https://github.com/v0d1ch/connected-types/issues
author:         Sasa Bogicevic
maintainer:     sasa.bogicevic@pm.me
copyright:      2019 Sasa Bogicevic
license:        BSD3
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/v0d1ch/connected-types

library
  exposed-modules:
      Email
  other-modules:
      Paths_simple
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , mtl

  default-language: Haskell2010
  ghc-options: -Wall

executable simple-exe
  main-is: Main.hs
  other-modules:
      Paths_simple
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , simple
    , aeson
  default-language: Haskell2010

test-suite simple-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_simple
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , simple
  default-language: Haskell2010
